Bug 444678 - Desktop Grid animations aren't smooth
Summary: Desktop Grid animations aren't smooth
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-desktop-grid (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-30 19:10 UTC by monorail_unadorned989
Modified: 2022-03-08 17:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description monorail_unadorned989 2021-10-30 19:10:07 UTC
SUMMARY


STEPS TO REPRODUCE
1. Enable Desktop Grid
2. Press a shortcut to use Desktop Grid
3. Try to move windows around and go into different desktops

OBSERVED RESULT
Smooth animations that were there before don't work, everything looks like without compositor

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux 5.14.14-arch1-1 / KDE Plasma 5.23.2
(available in About System)
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
NVIDIA graphics card, X11. Was working fine before on 5.23.1 (I believe, I only haven't updated in a week)
Comment 1 Nate Graham 2021-11-08 17:19:10 UTC
Can confirm.
Comment 2 Nate Graham 2021-11-08 17:19:35 UTC
*** Bug 288530 has been marked as a duplicate of this bug. ***
Comment 3 Janet Blackquill 2022-03-08 00:53:27 UTC
*** Bug 447472 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-03-08 00:54:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2095
Comment 5 Nate Graham 2022-03-08 17:21:37 UTC
Git commit eb933bfe0bd84b37e73280885b55b2b5389ad892 by Nate Graham, on behalf of Jan Blackquill.
Committed on 08/03/2022 at 17:21.
Pushed by ngraham into branch 'master'.

effects/desktopgrid: don't forget to schedule repaints when timeline is running
FIXED-IN: 5.24.4

M  +1    -1    src/effects/desktopgrid/desktopgrid.cpp

https://invent.kde.org/plasma/kwin/commit/eb933bfe0bd84b37e73280885b55b2b5389ad892
Comment 6 Nate Graham 2022-03-08 17:23:01 UTC
Git commit 770a701ee53dfeadd7b3054844d474628a723c4f by Nate Graham, on behalf of Jan Blackquill.
Committed on 08/03/2022 at 17:22.
Pushed by ngraham into branch 'Plasma/5.24'.

effects/desktopgrid: don't forget to schedule repaints when timeline is running
FIXED-IN: 5.24.4


(cherry picked from commit eb933bfe0bd84b37e73280885b55b2b5389ad892)

M  +1    -1    src/effects/desktopgrid/desktopgrid.cpp

https://invent.kde.org/plasma/kwin/commit/770a701ee53dfeadd7b3054844d474628a723c4f