effects/desktopgrid: don't forget to schedule repaints when timeline is running

BUG: 444678
FIXED-IN: 5.24.4


(cherry picked from commit eb933bfe0bd84b37e73280885b55b2b5389ad892)